--- a/PuzzleBox/Config/DefaultInput.ini
+++ b/PuzzleBox/Config/DefaultInput.ini
@@ -48,6 +48,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveZaxis",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveHorizontal",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveZaxis",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="LookV",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="LookH",Scale=1.000000,Key=MouseX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
