--- a/PuzzleBox/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzleBox/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,6 +105,7 @@ LastLevel=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet_DK.BP_Bullet_DK
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -228,6 +229,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.LookH,InputSettings.Bindings.AxisMappings.LookV,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.MonoColor,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.MonoColor,
+PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzleBox/DavidKingsley/Core/BP_PushableBlock_DK.BP_PushableBlock_DK;
@@ -1048,6 +1050,43 @@ BP_PushableBlock_DK_C.Replication=True
 BP_PushableBlock_DK_C.Input=True
 BP_PushableBlock_DK_C.Actor=True
 BP_PushableBlock_DK_C.TransformCommon=True
+BP_Bullet1_DK_C.Tick=True
+BP_Bullet1_DK_C.Rendering=True
+BP_Bullet1_DK_C.Replication=True
+BP_Bullet1_DK_C.Input=True
+BP_Bullet1_DK_C.Actor=True
+REINST_BP_Enemy1_DK_C_203.None=True
+REINST_BP_Enemy1_DK_C_203.Tick=True
+REINST_BP_Enemy1_DK_C_203.Character=True
+REINST_BP_Enemy1_DK_C_203.Camera=True
+REINST_BP_Enemy1_DK_C_203.Pawn=True
+REINST_BP_Enemy1_DK_C_203.Rendering=True
+REINST_BP_Enemy1_DK_C_203.Replication=True
+REINST_BP_Enemy1_DK_C_203.Input=True
+REINST_BP_Enemy1_DK_C_203.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+PhysicsConstraintComponent.Variable=True
+PhysicsConstraintComponent.TransformCommon=True
+PhysicsConstraintComponent.Sockets=True
+PhysicsConstraintComponent.Rendering=True
+PhysicsConstraintComponent.Constraint=True
+PhysicsConstraintComponent.Constraint Behavior=True
+PhysicsConstraintComponent.Linear Limits=True
+PhysicsConstraintComponent.Angular Limits=True
+PhysicsConstraintComponent.Tags=True
+PhysicsConstraintComponent.LinearMotor=True
+PhysicsConstraintComponent.ComponentReplication=True
+PhysicsConstraintComponent.AngularMotor=True
+PhysicsConstraintComponent.Cooking=True
+PhysicsConstraintComponent.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1058,15 +1097,15 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
 Object=
-Object="\"Object.Shape.BoxExtent\" "
+Object=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
-PrimitiveComponent="\"Object.Shape.BoxExtent\" "
-SceneComponent="\"Object.Shape.BoxExtent\" "
-ActorComponent="\"Object.Shape.BoxExtent\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 GeneralProjectSettings="\"Object.Settings\" "
 Engine="\"Object.Settings\" "
 PaperRuntimeSettings="\"Object.Settings\" "
@@ -1746,25 +1785,27 @@ MeshBuilder.TimeStamp=2020.02.11-02.07.08
 MeshBuilder.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PuzzleBox/DavidKingsley/Core/BP_PushableBlock_DK
 MRUItem1=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet_DK
-MRUItem2=/Game/PuzzleBox/DavidKingsley/Core/BP_Person_DK
-MRUItem3=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy2_DK
-MRUItem4=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy1_DK
-MRUItem5=/Game/PuzzleBox/DavidKingsley/Core/BP_WallEnemy1_DK
-MRUItem6=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
-MRUItem7=/Game/PuzzleBox/MaterialLibrary/MI_Terminal
-MRUItem8=/Game/PuzzleBox/Core/BP_PuzzleObject
-MRUItem9=/Game/PuzzleBox/Core/BP_Terminal
-MRUItem10=/Game/PuzzleBox/Core/BP_Person
-MRUItem11=/Game/PuzzleBox/Core/PuzzleObject
-MRUItem12=/Game/PuzzleBox/MaterialLibrary/MI_PuzzleObject
-MRUItem13=/Game/PuzzleBox/MaterialLibrary/M_MonoColor
-MRUItem14=/Game/PuzzleBox/BP_Enemy
-MRUItem15=/Game/PuzzleBox/PuzzleBox/Maps/EnemyTestRoom
+MRUItem2=/Game/PuzzleBox/DavidKingsley/Art/SM_Person_DK
+MRUItem3=/Game/PuzzleBox/DavidKingsley/Core/BP_Person_DK
+MRUItem4=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet1_DK
+MRUItem5=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy1_DK
+MRUItem6=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy2_DK
+MRUItem7=/Game/PuzzleBox/DavidKingsley/Core/BP_WallEnemy1_DK
+MRUItem8=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
+MRUItem9=/Game/PuzzleBox/MaterialLibrary/MI_Terminal
+MRUItem10=/Game/PuzzleBox/Core/BP_PuzzleObject
+MRUItem11=/Game/PuzzleBox/Core/BP_Terminal
+MRUItem12=/Game/PuzzleBox/Core/BP_Person
+MRUItem13=/Game/PuzzleBox/Core/PuzzleObject
+MRUItem14=/Game/PuzzleBox/MaterialLibrary/MI_PuzzleObject
+MRUItem15=/Game/PuzzleBox/MaterialLibrary/M_MonoColor
+MRUItem16=/Game/PuzzleBox/BP_Enemy
+MRUItem17=/Game/PuzzleBox/PuzzleBox/Maps/EnemyTestRoom
 
 [AssetEditorToolkitTabLocation]
 /Game/PuzzleBox/Core/BP_Person.BP_Person=1
@@ -1782,6 +1823,9 @@ MRUItem15=/Game/PuzzleBox/PuzzleBox/Maps/EnemyTestRoom
 /Game/PuzzleBox/DavidKingsley/Core/BP_Person_DK.BP_Person_DK=1
 /Game/PuzzleBox/DavidKingsley/Core/BP_Bullet_DK.BP_Bullet_DK=1
 /Game/PuzzleBox/DavidKingsley/Core/BP_Enemy2_DK.BP_Enemy2_DK=1
+/Game/PuzzleBox/DavidKingsley/Core/BP_PushableBlock_DK.BP_PushableBlock_DK=1
+/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet1_DK.BP_Bullet1_DK=1
+/Game/PuzzleBox/DavidKingsley/Art/SM_Person_DK.SM_Person_DK=1
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
