--- a/PuzzleBox/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzleBox/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,9 +104,7 @@ CurrentPosGridSize=0
 LastLevel=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/PuzzleBox/DavidKingsley/Core/BP_MatineeDoor_DK.BP_MatineeDoor_DK
-OpenAssetsAtExit=/Game/PuzzleBox/DavidKingsley/Core/BP_PushBlock_DK.BP_PushBlock_DK
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -235,6 +233,7 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,BoxComponent.Physics.ConstraintsGroup,
 
 [PlacementMode]
+RecentlyPlaced=/Game/PuzzleBox/DavidKingsley/Core/BP_FinalDoor_DK.BP_FinalDoor_DK;
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/PuzzleBox/DavidKingsley/Core/BP_MatineeDoor_DK.BP_MatineeDoor_DK;
 RecentlyPlaced=/Game/PuzzleBox/DavidKingsley/Core/BP_Terminal_DK.BP_Terminal_DK;
@@ -254,7 +253,6 @@ RecentlyPlaced=/Game/PuzzleBox/BP_Enemy.BP_Enemy;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 
 [DetailCategories]
 DirectionalLight.TransformCommon=True
@@ -1259,6 +1257,18 @@ InterpTrackMove.InterpTrack=True
 ObjectProperty.DefaultValueCategory=True
 BP_MatineeDoor_DK_C.Default=True
 K2Node_VariableSet.Events=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Input=True
+NewBlueprint_C.Actor=True
+NewBlueprint_C.TransformCommon=True
+BP_FinalDoor_DK_C.TransformCommon=True
+BP_FinalDoor_DK_C.Rendering=True
+BP_FinalDoor_DK_C.Replication=True
+BP_FinalDoor_DK_C.Input=True
+BP_FinalDoor_DK_C.Actor=True
+BP_FinalDoor_DK_C.Tick=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1969,26 +1979,26 @@ DistCurveEditor.LastCompileMethod=Unknown
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBox/DavidKingsley/Core/BP_MatineeDoor_DK
-MRUItem1=/Game/PuzzleBox/DavidKingsley/Core/BP_PushBlock_DK
-MRUItem2=/Game/PuzzleBox/DavidKingsley/Core/MatineeDoor_DK
-MRUItem3=/Game/PuzzleBox/DavidKingsley/Core/BP_Person_DK
-MRUItem4=/Game/PuzzleBox/DavidKingsley/Core/BP_Terminal_DK
-MRUItem5=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
-MRUItem6=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet_DK
-MRUItem7=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy1_DK
-MRUItem8=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet1_DK
-MRUItem9=/Game/PuzzleBox/DavidKingsley/Core/BP_PuzzleObject_DK
-MRUItem10=/Game/PuzzleBox/DavidKingsley/Core/BP_DONTKNOW_DK
-MRUItem11=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy2_DK
-MRUItem12=/Game/PuzzleBox/DavidKingsley/Art/SM_PuzzleObject2_DK
-MRUItem13=/Game/PuzzleBox/DavidKingsley/Art/SM_Terminal_DK
-MRUItem14=/Game/PuzzleBox/DavidKingsley/Core/BP_PushableBlock_DK
-MRUItem15=/Game/PuzzleBox/DavidKingsley/Art/SM_Person_DK
-MRUItem16=/Game/PuzzleBox/DavidKingsley/Core/BP_WallEnemy1_DK
-MRUItem17=/Game/PuzzleBox/MaterialLibrary/MI_Terminal
-MRUItem18=/Game/PuzzleBox/Core/BP_PuzzleObject
-MRUItem19=/Game/PuzzleBox/Core/BP_Terminal
+MRUItem0=/Game/PuzzleBox/DavidKingsley/Core/BP_FinalDoor_DK
+MRUItem1=/Game/PuzzleBox/DavidKingsley/Core/NewBlueprint
+MRUItem2=/Game/PuzzleBox/DavidKingsley/Maps/DK_Room
+MRUItem3=/Game/PuzzleBox/DavidKingsley/Core/BP_MatineeDoor_DK
+MRUItem4=/Game/PuzzleBox/DavidKingsley/Core/BP_PushBlock_DK
+MRUItem5=/Game/PuzzleBox/DavidKingsley/Core/MatineeDoor_DK
+MRUItem6=/Game/PuzzleBox/DavidKingsley/Core/BP_Person_DK
+MRUItem7=/Game/PuzzleBox/DavidKingsley/Core/BP_Terminal_DK
+MRUItem8=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet_DK
+MRUItem9=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy1_DK
+MRUItem10=/Game/PuzzleBox/DavidKingsley/Core/BP_Bullet1_DK
+MRUItem11=/Game/PuzzleBox/DavidKingsley/Core/BP_PuzzleObject_DK
+MRUItem12=/Game/PuzzleBox/DavidKingsley/Core/BP_DONTKNOW_DK
+MRUItem13=/Game/PuzzleBox/DavidKingsley/Core/BP_Enemy2_DK
+MRUItem14=/Game/PuzzleBox/DavidKingsley/Art/SM_PuzzleObject2_DK
+MRUItem15=/Game/PuzzleBox/DavidKingsley/Art/SM_Terminal_DK
+MRUItem16=/Game/PuzzleBox/DavidKingsley/Core/BP_PushableBlock_DK
+MRUItem17=/Game/PuzzleBox/DavidKingsley/Art/SM_Person_DK
+MRUItem18=/Game/PuzzleBox/DavidKingsley/Core/BP_WallEnemy1_DK
+MRUItem19=/Game/PuzzleBox/MaterialLibrary/MI_Terminal
 
 [AssetEditorToolkitTabLocation]
 /Game/PuzzleBox/Core/BP_Person.BP_Person=1
